<?xml version="1.0" encoding="utf-8"?>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    android:background="#050505">

        <TableLayout
          android:id="@+id/playArea"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
            android:layout_gravity="center">

          <TableRow
            android:id="@+id/tableRow1"
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

           <Button
             android:id="@+id/one"
              android:layout_width="100dp"
             android:layout_height="100dp"
               android:text="@string/one"
             android:textSize="70dp" />

            <Button
                android:id="@+id/two"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:text="@string/two"
            android:textSize="70dp" />

           <Button
            android:id="@+id/three"
             android:layout_width="100dp"
               android:layout_height="100dp"
             android:text="@string/three"
             android:textSize="70dp" />
          </TableRow>

         <TableRow
           android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
              android:id="@+id/four"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:text="@string/four"
              android:textSize="70dp" />

           <Button
              android:id="@+id/five"
             android:layout_width="100dp"
             android:layout_height="100dp"
              android:text="@string/five"
             android:textSize="70dp" />

           <Button
           android:id="@+id/six"
              android:layout_width="100dp"
             android:layout_height="100dp"
             android:text="@string/six"
              android:textSize="70dp" />
         </TableRow>

        <TableRow
           android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
              android:id="@+id/seven"
             android:layout_width="100dp"
              android:layout_height="100dp"
              android:text="@string/seven"
              android:textSize="70dp" />

           <Button
             android:id="@+id/eight"
            android:layout_width="100dp"
              android:layout_height="100dp"
              android:text="@string/eight"
              android:textSize="70dp" />

            <Button
             android:id="@+id/nine"
             android:layout_width="100dp"
              android:layout_height="100dp"
             android:text="@string/nine"
             android:textSize="70dp" />
          </TableRow>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableLayout>
        </TableLayout>

        <TextView
        android:id="@+id/information"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:gravity="center_horizontal"
          android:text="@string/info"
         android:textSize="30dp"
            android:textColor="#0ef33c" />

       <TableLayout
         android:id="@+id/tableLayout1"
          android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
          android:id="@+id/tableRow4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:gravity="center_horizontal" >

          <TextView
            android:id="@+id/human"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/human"
              android:textSize="20dp"
              android:textColor="#06f71a" />

          <TextView
            android:id="@+id/humanCount"
           android:layout_width="20dp"
            android:layout_height="wrap_content"
          android:layout_marginRight="10dp" />

         <TextView
           android:id="@+id/ties"
          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
          android:text="@string/ties"
             android:textSize="20dp"
             android:textColor="#0ef33c" />

          <TextView
           android:id="@+id/tiesCount"
           android:layout_width="25dp"
            android:layout_height="wrap_content"
           android:layout_marginRight="10dp" />

          <TextView
            android:id="@+id/android"
            android:layout_width="wrap_content"
          android:layout_height="wrap_content"
            android:text="@string/android"
              android:textSize="20dp"
              android:textColor="#0ef33c" />

         <TextView
            android:id="@+id/androidCount"
            android:layout_width="25dp"
          android:layout_height="wrap_content" />

        </TableRow>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="33dp">

            <Button
                android:id="@+id/new_game"

                android:text="@string/new_game"
                android:textColor="#0ef33c"
                android:textSize="22sp"

                android:layout_width="134dp"
                android:layout_height="52dp"
                android:background="#050505"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/exit_game"

                android:text="@string/exit_game"
                android:textColor="#0ef33c"
                android:textSize="22sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#050505"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                android:visibility="invisible"
                />


        </LinearLayout>
    </TableLayout>

</LinearLayout>

