<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.avee_yoyo.tictactoegame.TicTacToeActivity"
    tools:showIn="@layout/activity_tic_tac_toe">

    <TableLayout
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:id="@+id/playArea"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/one"
                android:id="@+id/one"
                android:layout_column="1"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                android:id="@+id/two"
                android:layout_column="3"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/three"
                android:id="@+id/three"
                android:layout_column="5"
                android:textSize="70sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/four"
                android:id="@+id/four"
                android:layout_column="1"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/five"
                android:layout_column="3"
                android:text="@string/five"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/six"
                android:id="@+id/six"
                android:layout_column="5"
                android:textSize="70sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/seven"
                android:id="@+id/seven"
                android:layout_column="1"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:layout_column="3"
                android:textSize="70sp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:layout_column="5"
                android:layout_gravity="bottom"
                android:textSize="70sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info"
        android:id="@+id/information"
        android:layout_below="@+id/playArea"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/information"
        android:layout_alignLeft="@+id/playArea"
        android:layout_alignStart="@+id/playArea"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/human"
            android:id="@+id/human"
            android:layout_marginLeft="2dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/clear"
            android:id="@+id/humanCount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ties"
            android:id="@+id/ties"
            android:layout_marginLeft="2dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/clear"
            android:id="@+id/tiesCount" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/android"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/clear"
            android:id="@+id/androidCount" />
    </TableRow>

</RelativeLayout>
