<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f11f1fe4">

    <EditText
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:id="@+id/first_player"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/first_player"
        android:layout_marginLeft="30dp"
        android:background="#35f6f6" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/second_player"
        android:layout_marginTop="25dp"
        android:hint="Enter second player"
        android:layout_marginLeft="30dp"
        android:background="#35f6f6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:id="@+id/button"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textColor="#010101" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:layout_marginLeft="40dp"
            android:textColor="#010101" />
    </LinearLayout>

</LinearLayout>